# PUCMinas-FastAPI-MiniCurso

./: README.md  makefile  pyproject.toml
app/: config.py  main.py  views.py
app/db/: base.py  engine.py
app/db/repositories/: ClienteRepository.py  FilmeRepository.py
app/db/repositories/models/: __init__.py  cliente.py  filme.py  locacao.py
app/modules/cliente/: routes.py  schemas.py  services.py
app/modules/clientes/: routes.py  schemas.py  services.py
app/modules/filme/: routes.py  schemas.py  services.py
app/modules/first_example/: routes.py  schemas.py  services.py
app/modules/locacao/: routes.py  schemas.py  services.py
app/utils/: exceptions.py  helpers.py
